<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="@dimen/small"
    android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plusz"
            android:id="@+id/lista_plusz"
            android:gravity="center"
            android:textColor="@color/green"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/megjegyzes"
            android:id="@+id/lista_megjegyzes"
            android:gravity="center"
            android:textColor="@color/green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kategoria"
            android:id="@+id/lista_kategoria"
            android:gravity="center"
            android:textColor="@color/green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/osszeg"
            android:id="@+id/lista_osszeg"
            android:gravity="center"
            android:textColor="@color/green"/>

</LinearLayout>